--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# node modules & build outputs
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+/.next
+/out
 /build
+/.turbo/
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
+/logs
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
+.env.local
+.env.development
+.env.production
+
+# system & IDE files
+.DS_Store
+.idea/
+.vscode/
 
 # vercel
 .vercel
@@ -39,3 +30,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# testing
+/coverage
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# clerk config
+/.clerk/
+
+# SQLite (if used)
+*.db
+*.sqlite
